# leon-gpt

./: README.md  flake.nix  pyproject.toml
src/leon_gpt/: main.py  train.py
src/leon_gpt/config/: __init__.py
src/leon_gpt/data/: telegram_dump.py  text_dataset.py  tokenizer.py
src/leon_gpt/models/: bigram.py
src/leon_gpt/modules/: bigram.py  feed_forward.py  self_attention.py
tests/: test_data.py
