[project]
name = "leon-gpt"
version = "0.1.0"
description = "A GPT implementation that mimics Leon."
authors = [
    {name = "Felix Jablonski",email = "felix@jablonski.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
packages = [
    { include = "leon_gpt", from = "src" }
]

[tool.poetry.dependencies]
torch = "^2.5.1"
numpy = "^2.1.3"
mosaicml = "^0.28.0"

[tool.poetry.group.dev.dependencies]
jaxtyping = "^0.2.36"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
